--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
     <meta charset="utf-8">
     <title>Linear Regression with TensorFlow</title>
     <link href='http://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+    <link rel="icon" type="image/png" href="favicon.ico">
+
     <style media="screen">
       body {
         font-family: monospace, sans-serif;
         text-align: center;
       }
       canvas {
-        margin: 0 auto;
+        margin: 1em auto;
         display: block;
-        box-shadow: 0px 0px 10px 2px black;
+        box-shadow: 0px 0px 5px 2px black;
         border-radius: 10px;
       }
       .controls {
@@ -26,11 +28,14 @@
         width: 80%;
         max-width: 400px;
         padding: 0.5em;
-        margin: 0 auto;
+        margin: 1em auto 0;
       }
       p {
         max-width: 600px;
         margin: 0 auto 1em;
+      }
+      #resetBtn {
+        margin-bottom: 1em;
       }
     </style>
   </head>
@@ -40,9 +45,23 @@
       Click the black area to add points to the screen, and then let the TensorFlow optimizer create a best fit line for the points.
     </p>
     <div class="controls">
-      <label>Learning Rate: <input type="number" id="learningRate" value="0.5" step="0.1"></label>
+      <label>Optimizer:
+        <select id="optimizerSelect">
+          <option value="sgd">sgd</option>
+          <option value="adagrad">adagrad</option>
+          <option value="adadelta">adadelta</option>
+          <option value="adam">adam</option>
+          <option value="adamax">adamax</option>
+          <option value="rmsprop">rmsprop</option>
+        </select>
+      </label>
+      <label>Learning Rate: <input type="number" id="learningRate" step="0.1"></label>
       <label>Autofit: <input type="checkbox" id="autoFit" checked></label>
-      <button type="button" id="learnBtn" style="display: none">Learn</button>
+      <div id="canvasHolder"></div>
+      <button type="button" id="learnBtn" style="display: none; margin-bottom: 1em">Learn</button>
+      <button type="button" id="resetBtn">Reset</button>
+      <p>Made by <a href="https://elliotplant.com">Elliot Plant</a></p>
+      <p>Inspired by <a href="https://youtu.be/dLp10CFIvxI">The Coding Train</a></p>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/p5@1.1.9/lib/p5.js"></script>
